Fix category card content alignment

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -287,7 +287,7 @@ footer {
 .dfe-card {
   overflow: hidden;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 
   .title {
     height: 50px;
